# c-template-project

./: .gitignore
advancedC/files-homeWork/include/: filePracticeHeader.h
advancedC/files-homeWork/src/: CMakeLists.txt  filePracticeLibrary.c  filePracticeMain.c
advancedC/homeWork/: CMakeLists.txt  README.md  pointersQuestions  pointersQuestions.c  pointers_1.c
advancedC/homeWork/include/: name_length.h
advancedC/homeWork/src/: CMakeLists.txt  main.c  mallocFun.c  name_length.c  pointersQuestions.txt
advancedC/homeWork/tests/: CMakeLists.txt  mallocTest.c  test_name_length.c
advancedC/homeWork1-6/: CMakeLists.txt
advancedC/homeWork1-6/include/: mallocHeader.h
advancedC/homeWork1-6/src/: CMakeLists.txt  errorHandler.c  mallocLibrary.c  pointersSwap.c  ptrCast.c  ptrCast2.c  strCat.c
advancedC/homeWork1-6/tests/: CMakeLists.txt
advancedC/homeWorkPt2/: CMakeLists.txt
advancedC/homeWorkPt2/include/: filePracticeHeader.h
advancedC/homeWorkPt2/src/: CMakeLists.txt
advancedC/homeWorkPt2/tests/: CMakeLists.txt
advancedC/practice/: CMakeLists.txt  enumPractice.c  enumPractice2.c  enumPractice3.c  enumPractice4.c  library.c  library.h  main.c
advancedC/progHW/: CMakeLists.txt  environment.yml
advancedC/progHW(7-on)/: CMakeLists.txt
advancedC/progHW(7-on)/structs-N-Unions/src/: CMakeLists.txt  rectangle.c  rectangleLib.c
advancedC/progHW(7-on)/structs-N-Unions/tests/: CMakeLists.txt
advancedC/progHW/LinkedList/: linkedLib.c  linkedTest.c
advancedC/progHW/LinkedList_Class_Notes/: CMakeLists.txt  linkedHeader.h  linkedMain.c
advancedC/progHW/Networking/: CMakeLists.txt
advancedC/progHW/Networking/src/: CMakeLists.txt  tcp_time_client.c  tcp_time_server.c  udp_echo_client.c  udp_echo_server.c
advancedC/progHW/Threads/: CMakeLists.txt  threadsPractice.c
advancedC/progHW/Threads/Concurrency/: CMakeLists.txt  concurrencyHeader.h  concurrencyLib.c  concurrencyMain.c  concurrencyTest.c
advancedC/progHW/bits/: CMakeLists.txt
advancedC/progHW/bits/src/: CMakeLists.txt  negativeInts.c  printBits.c
advancedC/progHW/enums-N-typedefs/: CMakeLists.txt
advancedC/progHW/enums-N-typedefs/include/: errorHeader.h  loggerHeader.h
advancedC/progHW/enums-N-typedefs/src/: CMakeLists.txt  errorHandler.c  logger.c
advancedC/progHW/preprocessor/: CMakeLists.txt
advancedC/progHW/preprocessor/superAssert/: CMakeLists.txt
advancedC/progHW/preprocessor/superAssert/include/: superHeader.h
advancedC/progHW/preprocessor/superAssert/src/: CMakeLists.txt  superAssertMain.c
advancedC/progHW/preprocessor/welcome/: CMakeLists.txt
advancedC/progHW/preprocessor/welcome/include/: welcomeHeader.h
advancedC/progHW/preprocessor/welcome/src/: CMakeLists.txt  lib.c  main.c
advancedC/progHW/structs-N-Unions/: CMakeLists.txt
advancedC/progHW/structs-N-Unions/include/: myRectangle.h
advancedC/progHW/structs-N-Unions/src/: CMakeLists.txt  rectangle.c
advancedC/progHW/structs-N-Unions/tests/: CMakeLists.txt  rectangleTests.c
